# ms-proyecto-final-ai-despliegue-senales

./: .gitignore  README.md  docker-compose.yml
appmovil/: settings.gradle
appmovil/app/: build.gradle
appmovil/app/src/androidTest/java/com/example/proyectofinaldespliegue/: ExampleInstrumentedTest.kt
appmovil/app/src/main/: AndroidManifest.xml
appmovil/app/src/main/java/com/example/proyectofinaldespliegue/: MainActivity.kt
appmovil/app/src/main/res/layout/: activity_main.xml
appmovil/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
appmovil/app/src/main/res/values-night/: themes.xml
appmovil/gradle/wrapper/: gradle-wrapper.properties
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: __init__.py  api.py
backend/api/config/: __init__.py  config.py  database.py
backend/api/exercises/: __init__.py  exercises_controller.py
backend/api/helper/: helper.py
backend/api/inferences/: __init__.py  inference_controller.py
backend/api/models/: __init__.py  models.py
backend/model_loader/: model_loader.py
front/src/app/: app.component.ts
front/src/app/exercises/: exercises.component.ts
frontend/: Dockerfile  README.md  angular.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.module.ts  app.service.ts
frontend/src/app/counter-exercises/: counter-exercises.component.html  counter-exercises.component.ts  counter-exercises.service.ts
frontend/src/app/exercises/: exercises.component.html  exercises.service.ts
mosquitto/config/: mosquitto.conf
sensor/: es32_sense_accelerometer.ino
(+1 files in other folders)
